--- a/css/cat.css
+++ b/css/cat.css
@@ -1,28 +1,38 @@
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
     margin: 0;
 }
 
-.cat_table {
-    width: 100%;
-    border-collapse: collapse;
+.cat_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin-top: 20px;
 }
 
-.cat_table th,
-.cat_table td {
+.product_card {
+    width: 200px;
+    margin: 10px;
+    padding: 10px;
     border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
 }
 
-.cat_table th {
-    background-color: #f2f2f2;
+.product_card:hover {
+    transform: scale(1.05);
 }
 
-.list_td {
-    max-width: 150px;
+.product_card img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+    border-radius: 8px;
+}
+
+.product_card p {
+    margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
